[tool.poetry]
name = "templatewithtelegram"
version = "0.1.0"
description = "TemplateWithTelegram"
authors = ["danogurtsov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "20.6"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
